# pawn-omp-websockets

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  websockets.inc
src/: client-manager.cpp  client-manager.hpp  client-natives.cpp  client.cpp  client.hpp  constructor.hpp  indexed-vector.hpp  interface.hpp  main.cpp  task-sync.cpp  task-sync.hpp  web-socket.hpp  web-sockets.cpp  web-sockets.hpp
